--- a/dataloader/config.yml
+++ b/dataloader/config.yml
@@ -3,8 +3,8 @@ global:
   character_dict_path: 'dict/vietnam_dict.txt'
 
 dataset:
-  ext_op_transfrom_idx: 
-  transforms:
+  ext_op_transfrom_idx: 1 
+  transforms_train:
     - RecConAug:
           prob: 0.5
           ext_data_num: 2
@@ -12,6 +12,11 @@ dataset:
           max_text_length: 60
     - RecAug:
     - Albumentation:
+    - CTCLabelEncode:
+    - SVTRRecResizeImg:
+        image_shape: [3, 64, 256]
+        padding: true
+  transforms_test:
     - CTCLabelEncode:
     - SVTRRecResizeImg:
         image_shape: [3, 64, 256]
